--- a/audrey/sample.html
+++ b/audrey/sample.html
@@ -24,7 +24,7 @@
          * You should ideally store your api key in a separate, private file.
          */
         var queryOpts = { 
-          "api_key": "66b24c8ffcca9b7708d33ecddaec1d2d", 
+          "api_key": "<your api key>", 
           "q": "animalia", 
           "sourceResource.type": "image",
           "fields": "id,object",
