--- a/markb/index.html
+++ b/markb/index.html
@@ -4,6 +4,7 @@
         <title>Intro the DPLA API</title>
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="http://underscorejs.org/underscore-min.js"></script>
+        <script src="./jquery.jsonp.js"></script>
         <script src="./app.js"></script>
     </head>
     <body>
