--- a/markb/index.html
+++ b/markb/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Intro the DPLA API</title>
+        <title>Intro to the DPLA API</title>
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="http://underscorejs.org/underscore-min.js"></script>
         <script src="./jquery.jsonp.js"></script>
