--- a/js-onepage/sample.html
+++ b/js-onepage/sample.html
@@ -27,7 +27,7 @@
          * You should ideally store your api key in a separate, private file.
          */
         var queryOpts = { 
-          "api_key": "<your api key>", 
+          "api_key": "your api key here", 
           "q": "dogs", 
           "sourceResource.type": "image",
           "fields": "id,object",
